2008-08-16  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_text_cluster.rb: add tests for Cairo::TextCluster.

	* test/test_scaled_font.rb (ScaledFontTest#test_text_to_glyphs):
	add a test for Cairo::ScaledFont#text_to_glyphs.

	* src/rb_cairo.h, src/rb_cairo.c, src/cairo.def,
	src/rb_cairo_text_cluster.c: add Cairo::TextCluster.

	* src/rb_cairo_scaled_font.c: support
	Cairo::ScaledFont#text_to_glyphs.

	* src/rb_cairo_private.[ch] (rb_cairo__glyphs_to_ruby_object),
	(rb_cairo__text_clusters_to_ruby_object): add.

	* src/rb_cairo_context.c: support
	Cairo::Context#have_show_text_glyphs?.

	* test/test_context.rb (ContextTest#test_have_show_text_glyphs):
	add a test for Cairo::Context#have_show_text_glyphs?.

2008-08-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_scaled_font.c: support Cairo::ScaledFont#scale_matrix.

	* test/test_scaled_font.rb: add.

	* src/rb_cairo_matrix.c (cr_matrix_equal): add Cairo::Matrix#==.

	* src/rb_cairo_surface.c: support Cairo::Surface#fallback_resolution.

	* test/test_surface.rb (SurfaceTest#test_fallback_resolution): add
	a test for Cairo::Surface#fallback_resolution.

	* test/test_context.rb (ContextTest#test_font_face): add a test
	for Cairo::Context#font_face{,=}.

	* src/rb_cairo_private.[ch] (rb_cairo__inspect): add.

	* test/test_font_face.rb: add.

	* src/rb_cairo_font_face.c: support Cairo::ToyFontFace.

	* src/cairo.def, src/rb_cairo.h: add rb_cCairo_ToyFontFace and
	rb_cCairo_UserFontFace.

2008-08-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/constants.rb (Cairo::LCD_FILTER_*): define.

	* src/rb_cairo.h (RVAL2CRLCDFILTER,
	rb_cairo_lcd_filter_from_ruby_object): add.

	* src/cairo.def (rb_cairo_lcd_filter_from_ruby_object): add.

	* src/rb_cairo_font_options.c (Cairo::FontOptions#lcd_filter,
	Cairo::FontOptions#lcd_filter=): add.

	* test/test_font_options.rb: add.

	* src/rb_cairo.h, src/cairo.def, src/rb_cairo_constants.c
	(Cairo::LCDFilter): add.

	* test/test_constants.rb: add.
